crates/canvas-cli/tests/e2e/snapshots/auth_login_table.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: body
---
exit: 0
--- stdout ---
logged in as Synthetic Student (60001)
profile: default
identity: <origin> / 60001
credential backend: file
--- stderr ---
using token from stdin
