crates/canvas-cli/tests/e2e/snapshots/auth_logout_table.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: body
---
exit: 0
--- stdout ---
logged out profile default
removed: file
--- stderr ---
