crates/canvas-cli/tests/e2e/snapshots/auth_status_json.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: value
---
{
  "exit": 0,
  "freshness": [],
  "generated_at": "2026-09-09T17:05:12Z",
  "identity": {
    "key": "<identity>",
    "origin": "<origin>",
    "user_id": "1"
  },
  "outcome": "ok",
  "partial": [],
  "profile": "default",
  "requests": {
    "api": 0,
    "cost": null,
    "storage": 0
  },
  "result": {
    "backend": "file",
    "identity": {
      "key": "<identity>",
      "origin": "<origin>",
      "user_id": "1"
    },
    "pending_cleanup": [],
    "profile": "default",
    "stray_sources": [],
    "token_source": "file",
    "validated_at": "2026-09-09T17:05:12Z"
  },
  "schema": "canvas-cli/auth_status@1",
  "warnings": []
}
