crates/canvas-cli/tests/e2e/snapshots/auth_status_table.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: body
---
exit: 0
--- stdout ---
profile: default
identity: <origin> / 60001
token source: file
backend: file
validated at: 2040-09-09T17:05:12Z
--- stderr ---
