crates/canvas-cli/tests/e2e/snapshots/auth_token_reveal.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: body
---
exit: 0
--- stdout ---
<token>
--- stderr ---
