crates/canvas-cli/tests/e2e/snapshots/cache_clear_table.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: body
---
exit: 0
--- stdout ---
cleared: true
rows_deleted: 101
--- stderr ---
